--- a/FrontEnd/src/css/Contact.css
+++ b/FrontEnd/src/css/Contact.css
@@ -12,15 +12,17 @@
   }
 .container {
   
-    max-width: 500px;
-    width: 100%;
+    height: 100%;
+    width: 60%;
     margin: 0 auto;
     position: relative;
+    
   }
 #contact {
+    color:white;
     background: #2B0A59;
     padding: 20px;
-    margin:100px 0;
+    margin:10px 0;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
   
@@ -50,13 +52,5 @@ input[type=submit] {
 input[type=submit]:hover {
     background-color: rgb(140, 0, 255);
 }  
-h1{
-    color:white;
-}
 
-  @media screen and (max-width: 600px) {
-    .col-25, .col-75, input[type=submit] {
-      width: 100%;
-      margin-top: 0;
-    }
-  }
+
