--- a/frontend/src/css/Bloglist.css
+++ b/frontend/src/css/Bloglist.css
@@ -30,10 +30,46 @@
 .blog-title{
     text-transform: uppercase;
     margin:5px 0px;
+    font-size: 20px;
 }
 
 .blog-author{
     margin: 5px 0px;
     padding-bottom: 20px;
-    font-size: 18px;
+    font-size: 15px;
+   
+}
+
+.blog-category{
+  
+      background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+      border-radius: 8px;
+      border-style: none;
+      box-sizing: border-box;
+      color: #FFFFFF;
+      cursor: pointer;
+      flex-shrink: 0;
+      font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+      font-size: 6px;
+      font-weight: 500;
+      height: 5px;
+      padding: 15px 50px;
+      text-align: center;
+      text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+      transition: all .5s;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+    }
+    
+    .button-36:hover {
+      box-shadow: rgba(80, 63, 205, 0.5) 0 15px 30px;
+      transition-duration: .1s;
+    }
+    
+    @media (min-width: 768px) {
+      .button-36 {
+        padding: 0 2.6rem;
+      }
+    
 }
