--- a/frontend/src/css/Bloglist.css
+++ b/frontend/src/css/Bloglist.css
@@ -9,67 +9,102 @@
 
 
 .cards{
-    width: 300px;
-    height: 400px;
-    border: 1px solid black;
-    border-radius: 5px;
-    overflow: hidden;
-    padding: 10px;
-    margin: 40px 20px;
+ 
+  width: 300px;
+  height: 320px;
+  padding: .8em;
+  background: #f5f5f5;
+  position: relative;
+  overflow: visible;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+   
+  
     
 }
 
+.card-info {
+  padding-top: 2%;
+ 
+ }
+
 .blog-image{
-    width: 100%;
-    max-width: 300px;
-    min-height: 200px;
+     height: 40%;
+ width: 100%;
     display: block;
     object-fit: cover;
+    border-radius: 6px 6px 6px 6px;
 }
 
 .blog-title{
-    text-transform: uppercase;
-    margin:5px 0px;
-    font-size: 20px;
+   text-transform: uppercase;
+   font-size: 20px;
+   font-weight: 700;
+   height: 100vh;
+   position: relative;
+  background-clip: border-box;
+  color: black;
+  
 }
 
 .blog-author{
-    margin: 5px 0px;
-    padding-bottom: 20px;
-    font-size: 15px;
+  color: gray;
+  font-weight: 400;
+  font-size: 11px;
+  padding-top: 5%;
    
 }
 
 .blog-category{
+    margin:10px 0px;
+    align-items: center;
+    background-color: #FFE7E7;
+    background-position: 0 0;
+    border: 1px solid #FEE0E0;
+    border-radius: 11px;
+    box-sizing: border-box;
+    color: #D33A2C;
+    cursor: pointer;
+    display: flex;
+    font-size:13px;
+    font-weight: 550;
+    line-height: 20px;
+    list-style: outside url(https://www.smashingmagazine.com/images/bullet.svg) none;
+    padding: 0px 40px;
+    text-align: left;
+    text-decoration: none;
+    text-shadow: none;
+    text-underline-offset: 1px;
+    transition: border .2s ease-in-out,box-shadow .2s ease-in-out;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    word-break: break-word;
+  }
   
-      background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
-      border-radius: 8px;
-      border-style: none;
-      box-sizing: border-box;
-      color: #FFFFFF;
-      cursor: pointer;
-      flex-shrink: 0;
-      font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
-      font-size: 6px;
-      font-weight: 500;
-      height: 5px;
-      padding: 15px 50px;
-      text-align: center;
-      text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-      transition: all .5s;
-      user-select: none;
-      -webkit-user-select: none;
-      touch-action: manipulation;
-    }
-    
-    .button-36:hover {
-      box-shadow: rgba(80, 63, 205, 0.5) 0 15px 30px;
-      transition-duration: .1s;
-    }
-    
-    @media (min-width: 768px) {
-      .button-36 {
-        padding: 0 2.6rem;
-      }
-    
+  .button-45:active,
+  .button-45:hover,
+  .button-45:focus {
+    outline: 0;
+  }
+  
+  
+  .button-45:active {
+    background-color: #D33A2C;
+    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px 0 inset;
+    color: #FFFFFF;
+  }
+  
+  .button-45:hover {
+    background-color: #FFE3E3;
+    border-color: #FAA4A4;
+  }
+  
+  .button-45:active:hover,
+  .button-45:focus:hover,
+  .button-45:focus {
+    background-color: #D33A2C;
+    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px 0 inset;
+    color: #FFFFFF;
+  
 }
