--- a/frontend/src/css/Contact.css
+++ b/frontend/src/css/Contact.css
@@ -32,14 +32,17 @@ label {
     display: inline-block;
     color: white;
 }
-input[type=submit] {
+.contactButton {
     background-color: white;
     color: #2B0A59;
-    padding: 12px 20px;
+    padding: 7px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-size: 16px;
 }
-input[type=submit]:hover {
-    background-color: rgb(140, 0, 255);
+.contactButton:hover {
+    background-color: rgb(235, 217, 255);
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    
 }  
