--- a/frontend/src/css/BlogDetail.css
+++ b/frontend/src/css/BlogDetail.css
@@ -1,26 +1,13 @@
 .each-blog-title{
-  font-size: 28px;
-  font-weight: 500;
-  letter-spacing: 0;
-  line-height: 1.5em;
-  padding-bottom: 15px;
-  position: relative;
-
-  margin-left: auto;
-  margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
+    width: 19.5em;
+    text-transform: uppercase;
+    padding-top: 1em;
+    font-size: 38px;
+    padding-bottom: 0.5em;
 }
 
-.blog-whole{
-    
-    display: grid;
-	justify-self: center;
-    top: 50%;
-    left: 50%;
-
-    width: 80em
-
-/*  align-items: center; */
-}
 
 
 .detail-image{
@@ -38,5 +25,12 @@
     
     margin-left: auto;
     margin-right: auto;
-    width: 48em;
+    width: 47em;
+}
+
+.publish-date{
+    font-weight: 50;
+    padding-left: 15.5em;
+    padding-bottom: 1em;
+    padding-top: 0.3em;
 }
