--- a/frontend/src/css/Contact.css
+++ b/frontend/src/css/Contact.css
@@ -3,7 +3,15 @@
 * {
     box-sizing: border-box;
   }
+  .contactContainer{
+    
+   
+    background-image: url("images/home_page_back0.png");
+    background-size: cover;
+    width: 100%;
+    height: 700px;
 
+}
 
 #contact {
     display: block;
@@ -42,7 +50,7 @@ label {
     font-size: 16px;
 }
 .contactButton:hover {
-    background-color: rgb(235, 217, 255);
+    background-color: rgb(254, 251, 203);
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     
 }  
